# kl1p-test

./: .gitignore  README.md  main.cpp  makefile  run.py
amp_test/: AMP-Signal.csv  CompressedSensingExample.cpp  CompressedSensingExample.h  OriginalSignal.csv  main.cpp  makefile  test-amp
include/: Constants.h  CreatSignal.h  DataProc.h  KL1pInclude.h  KLabInclude.h  KSciInclude.h  MatrixIO.h  TestCSAlgorithm.h
libs/Armadillo/: CMakeLists.txt  README.txt
libs/Armadillo/docs/: index.html
libs/KL1p/: LICENSE.txt
libs/KL1p/include/: AMPHistoryElement.h  AMPSolver.h  AdditionOperator.h  AdjointBlockOperator.h  AdjointOperator.h  BasisPursuitHistoryElement.h  BasisPursuitSolver.h  BlockDiagonalOperator.h  BlockOperator.h  BlockSparseOperator.h  BlockTridiagonalOperator.h  CoSaMPHistoryElement.h  CoSaMPSolver.h  ColumnJointOperator.h  ComplexProxyBlockOperator.h  ComplexProxyOperator.h  DCT1DOperator.h  DCT2DOperator.h  DiagonalOperator.h  DownSamplingOperator.h  EMBPHistoryElement.h  EMBPSolver.h  Fourier1DOperator.h  Fourier2DOperator.h  Gaussian1DDiagonalOperator.h  Gaussian2DDiagonalOperator.h  GaussianBlur1DOperator.h  GaussianBlur2DOperator.h  GenericSeedingOperator.h  History.h  IdentityOperator.h  InverseDCT1DOperator.h  InverseDCT2DOperator.h  InverseFourier1DOperator.h  InverseFourier2DOperator.h  InverseGaussian1DDiagonalOperator.h  InverseGaussian2DDiagonalOperator.h  InverseGaussianBlur1DOperator.h  InverseGaussianBlur2DOperator.h  InverseWalshHadamard1DOperator.h  (+43 more)
libs/KL1p/maintest/: AMPHistoryUnitTest.cpp  AMPHistoryUnitTest.h  AMPSolverUnitTest.cpp  AMPSolverUnitTest.h  AdditionOperatorUnitTest.cpp  AdditionOperatorUnitTest.h  AdjointBlockOperatorUnitTest.cpp  AdjointBlockOperatorUnitTest.h  AdjointOperatorUnitTest.cpp  AdjointOperatorUnitTest.h  BasisPursuitHistoryUnitTest.cpp  BasisPursuitHistoryUnitTest.h  BasisPursuitSolverUnitTest.cpp  BasisPursuitSolverUnitTest.h  BlockDiagonalOperatorUnitTest.cpp  BlockDiagonalOperatorUnitTest.h  BlockOperatorUnitTest.cpp  BlockOperatorUnitTest.h  BlockSparseOperatorUnitTest.cpp  BlockSparseOperatorUnitTest.h  BlockTridiagonalOperatorUnitTest.cpp  BlockTridiagonalOperatorUnitTest.h  CMakeLists.txt  CoSaMPHistoryUnitTest.cpp  CoSaMPHistoryUnitTest.h  CoSaMPSolverUnitTest.cpp  CoSaMPSolverUnitTest.h  ColumnJointOperatorUnitTest.cpp  ColumnJointOperatorUnitTest.h  ComplexProxyBlockOperatorUnitTest.cpp  ComplexProxyBlockOperatorUnitTest.h  ComplexProxyOperatorUnitTest.cpp  ComplexProxyOperatorUnitTest.h  DCT1DOperatorUnitTest.cpp  DCT1DOperatorUnitTest.h  DCT2DOperatorUnitTest.cpp  DCT2DOperatorUnitTest.h  DiagonalOperatorUnitTest.cpp  DiagonalOperatorUnitTest.h  DownSamplingOperatorUnitTest.cpp  (+125 more)
libs/KLab/: LICENSE.txt
libs/KLab/include/: ArrayElement.h  AtomicCount.h  BitArray.h  CircularBuffer.h  DateTime.h  DefUtil.h  Exception.h  FileLogOutput.h  FuncUtil.h  GridElement.h  ILogData.h  ILogOutput.h  IndexedContainerElement.h  KLab.h  LibUtil.h  Log.h  LogData.h  LogOutput.h  LogOutputManager.h  Module.h  Mutex.h  Pointer.h  RGBColor.h  Random.h  ScopedMutex.h  Signal.h  SimpleSignal.h  Singleton.h  SmartPointer.h  StandardLogOutput.h  StringUtil.h  SystemTime.h  SystemUtil.h  SystemVersion.h  SystemVersionImpl.h  TemplateUtil.h  Thread.h  Timer.h  TypeInfo.h  TypeUtil.h
libs/KLab/main/: CMakeLists.txt
libs/KLab/main/macos/: UnixMakefile_x64Debug_Make.sh  UnixMakefile_x64Release_Make.sh  UnixMakefile_x86Release_Make.sh
libs/KLab/main/unix/: UnixMakefile_x86Debug_Make.sh
libs/KLab/main/unix/UnixMakefile_x64Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
libs/KLab/main/unix/UnixMakefile_x64Release/: CMakeCache.txt  Makefile  cmake_install.cmake
libs/KLab/main/unix/UnixMakefile_x86Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
libs/KLab/main/win/: Visual2005_x64Debug_Make.bat  Visual2005_x64Release_Make.bat  Visual2005_x86Debug_Make.bat  Visual2005_x86Release_Make.bat  Visual2008_x64Debug_Make.bat  Visual2008_x64Release_Make.bat  Visual2008_x86Debug_Make.bat  Visual2008_x86Release_Make.bat  Visual2010Express_x64Debug_Make.bat  Visual2010Express_x64Release_Make.bat  Visual2010Express_x86Debug_Make.bat  Visual2010Express_x86Release_Make.bat  Visual2010_x64Debug_Make.bat  Visual2010_x64Release_Make.bat  Visual2010_x86Debug_Make.bat  Visual2010_x86Release_Make.bat
libs/KLab/maintest/: ArrayElementUnitTest.cpp  ArrayElementUnitTest.h  AtomicCountUnitTest.cpp  AtomicCountUnitTest.h  BitArrayUnitTest.cpp  BitArrayUnitTest.h  CMakeLists.txt  CircularBufferUnitTest.cpp  CircularBufferUnitTest.h  DateTimeUnitTest.cpp  DateTimeUnitTest.h  ExceptionUnitTest.cpp  ExceptionUnitTest.h  FileLogOutputUnitTest.cpp  FileLogOutputUnitTest.h  FuncUtilUnitTest.cpp  FuncUtilUnitTest.h  GridElementUnitTest.cpp  GridElementUnitTest.h  IndexedContainerElementUnitTest.cpp  IndexedContainerElementUnitTest.h  KLabTest.cpp  KLabTest.h  LogDataUnitTest.cpp  LogDataUnitTest.h  LogOutputManagerUnitTest.cpp  LogOutputManagerUnitTest.h  LogOutputUnitTest.cpp  LogOutputUnitTest.h  LogUnitTest.cpp  LogUnitTest.h  ModuleUnitTest.cpp  ModuleUnitTest.h  MutexUnitTest.cpp  MutexUnitTest.h  RGBColorUnitTest.cpp  RGBColorUnitTest.h  RandomUnitTest.cpp  RandomUnitTest.h  ScopedMutexUnitTest.cpp  (+25 more)
libs/KLab/src/: BitArray.cpp  DateTime.cpp  Exception.cpp  Random.cpp  StringUtil.cpp  Timer.cpp  TypeUtil.cpp
libs/KSci/: LICENSE.txt
libs/KSci/include/: ArmadilloUtil.h  BiCubicInterpolationFilter.h  BiLinearInterpolationFilter.h  BiorthogonalDaubechiesWaveletFilter.h  BiorthogonalStaticWaveletFilter.h  Complex.h  ComplexProxyLinearOperator.h  ConjugateGradientSystemSolver.h  CosineTransform.h  CubicInterpolationFilter.h  CustomWaveletFilter.h  DCT.h  DCT1D.h  DCT2D.h  DFT.h  DFT1D.h  DFT2D.h  DWHT.h  DWHT1D.h  DWHT2D.h  DWT.h  DWT1D.h  DWT2D.h  DaubechiesWaveletFilter.h  DelegateWaveletFilter.h  FCT.h  FCT1D.h  FCT2D.h  FFT.h  FFT1D.h  FFT2D.h  FFTWUtil.h  FWHT.h  FWHT1D.h  FWHT2D.h  FWT.h  (+35 more)
py_scripts/stat_check/: similarity_matrix.py
py_scripts/tools/: rename-file  rep-firstline
rsc/: sensingMatrixKL1P.csv  sensingMatrixMatlab.csv
(+368 files in other folders)
